--- a/package.json
+++ b/package.json
@@ -23,5 +23,7 @@
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
     },
-    "dependencies": {}
+    "dependencies": {
+        "vue-js-toggle-button": "^1.3.3"
+    }
 }
