--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
+        "postcss": "^8.1.14",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
@@ -24,6 +25,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "vue-js-toggle-button": "^1.3.3"
+        "vue-js-toggle-button": "^1.3.3",
+        "vuejs-paginate": "^2.1.0"
     }
 }
